<resources>
    <string name="app_name">Som da Noite</string>
    <string name="parse_app_id">hS7gZpAkD3ALEhH4wyLfc9NtlIPg9FO5tiReB8PW</string>
    <string name="parse_client_key">GuiGMHGWjzE6Tqa8sq0wfnhXQjVJqVKAX3tx34ni</string>

    <string name="facebook_app_id">1969126016738538</string><!-- essa string antiga foi atualizada -->
    <string name="fb_login_protocol_scheme">fb1969126016738538</string>

 <!--   <string name="facebook_login_app_id">1969126016738538</string> esse é o id novo é uma cópia-->

    <string name="loading">Carregando&#8230;</string>
    <string name="localized_digits">0123456789,-</string>

    <string name="admob_app_id">ca-app-pub-7603586053638454~1454745579</string>
    <string name="admob_app_id_test">ca-app-pub-3940256099942544~3347511713</string>
    <string name="admob_banner">ca-app-pub-7603586053638454/2206566376</string>
    <string name="admob_banner_test">ca-app-pub-3940256099942544/6300978111</string>
    <string name="admob_interstitial">ca-app-pub-7603586053638454/5098299507</string>
    <string name="admob_interstitial_test">ca-app-pub-3940256099942544/1033173712</string>
    <string name="admob_teste"></string>

    <!-- Strings para Login e Cadastro -->
    <string name="botao_logar">Efetuar login</string>
    <string name="botao_cadastro">Cadastrar</string>
    <string name="sem_conta">Não tem conta?</string>
    <string name="com_conta">Já tem conta?</string>
    <string name="crie_conta">Crie uma!</string>
    <string name="digita_usuario">Digite um nome de usuário</string>
    <string name="digita_email">Digite seu email</string>
    <string name="digita_senha">Digite sua senha</string>
    <string name="fazer_login">Faça o login!!</string>
    <string name="digita_nome">Digite seu nome completo</string>
    <string name="sair">Sair</string>
    <string name="digita_local">Digite o local do evento</string>
    <string name="seleciona_data">Data do evento</string>
    <string name="botao_criar_evento">Criar Evento</string>
    <string name="voltar">Voltar</string>
    <string name="digita_nome_evento">Digite o nome do evento</string>
    <string name="seleciona_hora">Digite o horário</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="imagem_evento">Exibindo a imagem do evento</string>
    <string name="modelo_nome_evento">Nome do Evento</string>
    <string name="botao_add">Adicionar</string>
    <string name="modelo_nome_artista">Nome do Artista</string>
    <string name="modelo_nome_local">Local do Evento</string>
    <string name="modelo_data_local">Data do Evento</string>

    <string name="API_KEY_Google_Places">AIzaSyDSIEH1sHYde1Isa5hcMrjO7wcKELo-NBg</string>
    <string name="local_sem_nome">Sem nome definido</string>
    <string name="editar_nome">EDITAR NOME</string>
    <string name="selecione_o_local_do_evento">Selecione o local do Evento</string>
    <string name="no_records">Sem registros para exibir</string>
    <string name="page_error">Erro na pesquisa</string>
    <string name="descricao_evento">Descrição do Evento (max: 300 caracteres)</string>
    <string name="detalhes">Detalhes:</string>
    <string name="editar_evento">Editar Evento</string>
    <string name="nome_evento">Nome Evento</string>
    <string name="altera_evento">Alterar Evento</string>
    <string name="confirma_senha">Confirme sua senha</string>
    <string name="botao_excluir_evento">Excluir Evento</string>
    <string name="digita_nome_artista">Digite seu nome artístico</string>
    <string name="logotipo">logotipo</string>
    <string name="title_activity_intro">IntroActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="profissional_da_m_sica">Profissional da Música</string>
    <string name="estabelecimento">Estabelecimento</string>
    <string name="promotor_de_eventos">Promotor de Eventos</string>
    <string name="usuario">Usuário</string>
    <string name="selecione_abaixo_a_sua_categoria_de_cadastro">Selecione abaixo a sua categoria de cadastro:</string>
    <string name="preencha_os_dados_de_cadastro_abaixo">Preencha os dados de cadastro abaixo:</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="senha_nao_confere">Senhas não conferem. Por favor, digite novamente sua senha.</string>
    <string name="selecione_categoria_usuario">Selecione uma categoria de usuário.</string>
    <string name="minha_conta">Minha Conta</string>
    <string name="editar_dados">Editar Dados</string>
    <string name="alterar_senha">Alterar Senha</string>
    <string name="e_mail">E-mail:</string>
    <string name="categoria">Categoria:</string>
    <string name="nome_de_usuario">Nome de usuário:</string>
    <string name="nome_artistico">Nome Artístico:</string>
    <string name="nome">Nome:</string>
    <string name="meus_dados">Meus dados</string>
    <string name="salvar_alteracoes">Salvar Alterações</string>
    <string name="alterar_dados">Alterar Dados</string>
    <string name="imagem_configuracoes">Imagem Configurações</string>
    <string name="digita_senha_atual">Digite sua senha atual</string>
    <string name="digita_senha_nova">Digite uma nova senha</string>
    <string name="confirma_nova_senha">Confirme sua nova senha</string>
    <string name="cancelar">Cancelar</string>
    <string name="senhas_diferentes">A nova senha digitada é igual à atual. Favor digitar senhas diferentes.</string>
    <string name="senha_nao_confirmada">Nova senha não confirmada. Digite novamente.</string>
    <string name="sem_categoria_selecionada">Selecione uma categoria de cadastro</string>
    <string name="esqueceu_a_senha">Esqueceu a senha?</string>
    <string name="clique_aqui">Clique aqui!</string>
    <string name="confirmar">Confirmar</string>
    <string name="informar_email_cadastro">Digite abaixo o e-mail informado no cadastro e após em confirmar. Esse procedimento enviará uma nova senha para o e-mail informado, se estiver associado a um usuário válido.</string>
    <string name="digita_email_cadastro">Digite seu e-mail</string>
    <string name="ok">OK</string>
    <string name="texto_teste">Texto Teste</string>
    <string name="proximas_apresentacoes">Próximas apresentações de</string>
    <string name="proximos_eventos">Próximos eventos em:</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="search_hint">Pesquisar</string>
    <string name="voce_pesquisou">Você pesquisou por:</string>
    <string name="entrar_usando_faceboook">REGISTRAR COM FACEBOOOK</string>
    <string name="entrar_com_endere_o_de_e_mail">REGISTRAR COM ENDEREÇO DE E-MAIL</string>
    <string name="opcoes_cadastro">Escolha uma das opções de cadastro:</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="continuar">Continuar</string>
    <string name="preencha_seu_nome_e_e_mail">Preencha seu nome e e-mail</string>
    <string name="crie_um_nome_de_usu_rio_e_uma_senha">Crie um nome de usuário e uma senha</string>
    <string name="criar_senha">Crie uma senha</string>
    <string name="pronto">Pronto!</string>
    <string name="agora_voc_j_pode_utilizar_o_aplicativo_som_da_noite">Seu cadastro foi realizado com sucesso, e agora você já pode utilizar o Aplicativo SOM DA NOITE.</string>
    <string name="aqui_voc_encontra_os_melhores_eventos_que_est_o_para_acontecer_na_sua_regi_o">Aqui você encontra os melhores eventos que estão para acontecer na sua região.</string>
    <string name="comece_agora">Comece agora!</string>
    <string name="ver_eventos">Ver Eventos</string>
    <string name="senha_caracteres_minimos">Senha deve conter ao menos 6 caracteres</string>
    <string name="conclua_cadastro">Por favor, finalize as etapas anteriores para concluir o seu cadastro.</string>
    <string name="fafel_nome">Fafel TECH</string>
    <string name="fafel_descricao">Soluções Web e Mobile</string>
    <string name="fafel_contato">contato@fafeltech.com.br</string>
    <string name="dev_by">Desenvolvido por:</string>
    <string name="app_title">Som da Noite</string>
    <string name="versao_app">versão 1.0</string>
    <string name="sobre_o_aplicativo">Sobre o Aplicativo</string>
    <string name="fale_conosco">Fale Conosco</string>
    <string name="minhas_listas">Minhas Listas</string>
    <string name="menu">Menu</string>
    <string name="digite_um_nome_art_stico_para_ser_exibido_nos_eventos_que_voc_cadastrar">Digite um nome artístico para ser exibido nos eventos que você cadastrar:</string>
    <string name="marque_para_usar_o_nome_informado_no_cadastro">Marque para usar o nome informado no cadastro</string>
    <string name="escreva_um_pouco_sobre_voc_para_que_os_usu_rios_possam_conhec_lo_melhor">Escreva um pouco sobre você para que os usuários possam conhecê-lo melhor:</string>
    <string name="escreva_aqui_uma_descri_o_para_voc">Escreva aqui uma descrição para você.</string>
    <string name="marque_para_usar_este_nome_no_seu_cadastro">Marque para usar este nome no seu cadastro</string>
    <string name="selecionar_outro">SELECIONAR OUTRO</string>
    <string name="selecione_abaixo_a_localiza_o_do_seu_estabelecimento">Clique abaixo para selecionar a localização do seu estabelecimento:</string>
    <string name="selecione_abaixo_o_hor_rio_de_funcionamento_do_estabelecimento">Selecione abaixo o horário de funcionamento do estabelecimento:</string>
    <string name="imagem_de_geolocaliza_o">Imagem de GeoLocalização</string>
    <string name="das">Das</string>
    <string name="de">De</string>
    <string name="teste">Teste</string>
    <string name="todos_os_dias">Todos os dias</string>
    <string name="a">a</string>
    <string name="as">às</string>
    <string name="digite_abaixo_o_nome_que_deseja_exibir_como_promotor_dos_seus_eventos">Digite abaixo o nome que deseja exibir como promotor dos seus eventos:</string>
    <string name="favorito">favorito</string>
</resources>
