<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:gravity="center_horizontal|center_vertical">

    <TextView
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/opcoes_cadastro"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/facebook_login"
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/entrar_usando_faceboook"
        android:background="@color/blue"/>

    <Button
        android:id="@+id/email_login"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/entrar_com_endere_o_de_e_mail"
        android:background="@color/colorPrimary"/>

</LinearLayout>
