<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fundo_degrade"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.fafeltech.somdanoite.fragment.MinhaContaFragment">

    <ImageView
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:padding="@dimen/activity_horizontal_margin"
        android:src="@drawable/ic_settings"
        android:tint="@color/gelo"
        android:contentDescription="@string/imagem_configuracoes"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/meus_dados"
        android:textColor="@color/gelo"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginBottom="20dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/nome"
            android:padding="8dp"/>

        <TextView
            android:id="@+id/nome_mc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:text=""
            android:padding="8dp"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/nome_artistico"
            android:padding="8dp"/>

        <TextView
            android:id="@+id/nome_artista_mc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:text=""
            android:padding="8dp"/>

        <EditText
            android:visibility="gone"
            android:layout_gravity="center_vertical"
            android:background="@drawable/fundo_caixa_texto"
            android:id="@+id/nome_artista_ec"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:text=""
            android:textSize="14sp"
            android:padding="4dp"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/nome_de_usuario"
            android:padding="8dp"/>

        <TextView
            android:id="@+id/nome_usuario_mc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:text=""
            android:padding="8dp"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/categoria"
            android:padding="8dp"/>

        <TextView
            android:id="@+id/categoria_mc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:text=""
            android:padding="8dp"/>

        <Spinner
            android:visibility="gone"
            android:id="@+id/spinner_categoria_ec"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:text=""
            android:padding="4dp"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/e_mail"
            android:padding="8dp"/>

        <TextView
            android:id="@+id/email_mc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:text=""
            android:padding="8dp"/>

        <EditText
            android:visibility="gone"
            android:layout_gravity="center_vertical"
            android:background="@drawable/fundo_caixa_texto"
            android:id="@+id/email_ec"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:text=""
            android:textSize="14sp"
            android:padding="4dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_botoes"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/bt_edita_dados_mc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_botao"
            android:text="@string/editar_dados"
            android:layout_weight="1"
            android:padding="@dimen/activity_horizontal_margin"
            android:layout_marginTop="36dp"/>

        <Button
            android:id="@+id/bt_altera_senha_mc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_botao_excluir"
            android:text="@string/alterar_senha"
            android:layout_weight="1"
            android:padding="@dimen/activity_horizontal_margin"
            android:layout_marginTop="36dp"
            android:layout_marginStart="36dp"/>

        <Button
            android:visibility="gone"
            android:id="@+id/bt_salva_dados_ec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_botao"
            android:text="@string/salvar_alteracoes"
            android:padding="@dimen/activity_horizontal_margin"
            android:layout_marginTop="36dp"/>

    </LinearLayout>
</LinearLayout>
