<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ll_evento"
    android:foreground="?attr/selectableItemBackground"
    android:clickable="true"
    android:background="@drawable/fundo_botao"
    android:layout_marginTop="5dp"
    android:layout_marginStart="2dp"
    android:layout_marginEnd="2dp"
    android:layout_marginBottom="5dp"
    android:elevation="5dp"
    android:padding="5dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <com.pkmmte.view.CircularImageView
            android:contentDescription="@string/imagem_evento"
            android:layout_width="120dp"
            android:layout_height="102dp"
            android:id="@+id/evento_imagem"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:src="@mipmap/ic_launcher"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            app:border="true"
            app:border_color="#EEEEEE"
            app:border_width="2dp"
            app:shadow="true" />

        <RelativeLayout
            android:id="@+id/rl_1_modelo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toEndOf="@+id/evento_imagem">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/modelo_nome_evento"
                android:id="@+id/nome_evento"
                android:textSize="18sp"
                android:textIsSelectable="true"
                android:paddingTop="8dp"
                android:textColor="@color/gelo"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/modelo_nome_artista"
                android:id="@+id/nome_artista"
                android:textSize="14sp"
                android:textIsSelectable="true"
                android:paddingTop="8dp"
                android:layout_below="@+id/nome_evento"
                android:textColor="@color/gelo"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/modelo_nome_local"
                android:id="@+id/local_evento"
                android:textSize="14sp"
                android:textIsSelectable="true"
                android:paddingTop="8dp"
                android:textColor="@color/gelo"
                android:layout_below="@+id/nome_artista"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/modelo_data_local"
                android:id="@+id/data_evento"
                android:textSize="14sp"
                android:textIsSelectable="true"
                android:paddingTop="8dp"
                android:textColor="@color/gelo"
                android:layout_below="@+id/local_evento"/>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/botao_add_recycler"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_action_add"
                android:contentDescription="@string/botao_add"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_centerVertical="true"
                android:padding="5dp"
                app:backgroundTint="@color/colorAccent"
                app:fabSize="mini"
                android:tint="@color/white" />

        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>